// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  baseUrl=""
  chevronOverAvatar={false}
  closeMenu={[MockFunction]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  groupIds={
    Array [
      "",
    ]
  }
  hideJoinNow={false}
  hideSearch={false}
  isMobileOpen={false}
  loginUrl="/some/login/url"
  logos={Array []}
  menuItems={Array []}
  onMobileToggleClick={[MockFunction]}
  openMenu={[MockFunction]}
  openedMenu={null}
  pageId="home"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-style___additionalLogos___2kESCp",
      "authorize": "src-shared-components-tc-communities-Header-style___authorize___3D6gM9",
      "avatar": "src-shared-components-tc-communities-Header-style___avatar___3oM0D2",
      "avatarMobile": "src-shared-components-tc-communities-Header-style___avatarMobile___-Lpw_i",
      "btnLogin": "src-shared-components-tc-communities-Header-style___btnLogin___1_0xeR",
      "btnRegister": "src-shared-components-tc-communities-Header-style___btnRegister___4_i2VX",
      "challengeDropdown": "src-shared-components-tc-communities-Header-style___challengeDropdown___37eHau",
      "chevronDown": "src-shared-components-tc-communities-Header-style___chevronDown___3WBjR5",
      "container": "src-shared-components-tc-communities-Header-style___container___djzjmO",
      "header": "src-shared-components-tc-communities-Header-style___header___1hN8p_",
      "logo": "src-shared-components-tc-communities-Header-style___logo___3FMIlr",
      "logos": "src-shared-components-tc-communities-Header-style___logos___3WcXlK",
      "logosWrap": "src-shared-components-tc-communities-Header-style___logosWrap___2c1i8h",
      "menu": "src-shared-components-tc-communities-Header-style___menu___2fWXht",
      "menuItem": "src-shared-components-tc-communities-Header-style___menuItem___3vmTfg",
      "menuLink": "src-shared-components-tc-communities-Header-style___menuLink___RU0ueq",
      "menuLinkActive": "src-shared-components-tc-communities-Header-style___menuLinkActive___1gik1N",
      "menuWrap": "src-shared-components-tc-communities-Header-style___menuWrap___-1MeSD",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-style___menuWrapOpen___3MQGA5",
      "mobileToggle": "src-shared-components-tc-communities-Header-style___mobileToggle___15QDEM",
      "search": "src-shared-components-tc-communities-Header-style___search___3oZOks",
      "userMenu": "src-shared-components-tc-communities-Header-style___userMenu___3lmDGQ",
      "userMenuHandle": "src-shared-components-tc-communities-Header-style___userMenuHandle____n8Ezm",
      "userWrap": "src-shared-components-tc-communities-Header-style___userWrap___8o74BN",
      "userWrapMobile": "src-shared-components-tc-communities-Header-style___userWrapMobile___3FraR5",
    }
  }
/>
`;

exports[`Snapshot match 2`] = `
<Header
  activeTrigger={null}
  additionalLogos={Array []}
  baseUrl=""
  chevronOverAvatar={false}
  closeMenu={[MockFunction]}
  communityId="someId"
  communitySelector={
    Array [
      Object {
        "label": "Community Name",
        "value": "1",
      },
    ]
  }
  cssUrl="some/css/url"
  groupIds={
    Array [
      "",
    ]
  }
  hideJoinNow={false}
  hideSearch={false}
  isMobileOpen={true}
  loginUrl="/some/login/url"
  logos={
    Array [
      "some/logo/url",
    ]
  }
  menuItems={
    Array [
      Object {
        "title": "Menu Item 1",
        "url": "pageId1",
      },
      Object {
        "title": "Menu Item 2",
        "url": "pageId2",
      },
      Object {
        "title": "Menu Item 3",
        "url": "pageId3",
      },
    ]
  }
  onMobileToggleClick={[MockFunction]}
  openMenu={[MockFunction]}
  openedMenu={null}
  pageId="other"
  profile={null}
  registerUrl="/some/register/url"
  theme={
    Object {
      "additionalLogos": "src-shared-components-tc-communities-Header-style___additionalLogos___2kESCp",
      "authorize": "src-shared-components-tc-communities-Header-style___authorize___3D6gM9",
      "avatar": "src-shared-components-tc-communities-Header-style___avatar___3oM0D2",
      "avatarMobile": "src-shared-components-tc-communities-Header-style___avatarMobile___-Lpw_i",
      "btnLogin": "src-shared-components-tc-communities-Header-style___btnLogin___1_0xeR",
      "btnRegister": "src-shared-components-tc-communities-Header-style___btnRegister___4_i2VX",
      "challengeDropdown": "src-shared-components-tc-communities-Header-style___challengeDropdown___37eHau",
      "chevronDown": "src-shared-components-tc-communities-Header-style___chevronDown___3WBjR5",
      "container": "src-shared-components-tc-communities-Header-style___container___djzjmO",
      "header": "src-shared-components-tc-communities-Header-style___header___1hN8p_",
      "logo": "src-shared-components-tc-communities-Header-style___logo___3FMIlr",
      "logos": "src-shared-components-tc-communities-Header-style___logos___3WcXlK",
      "logosWrap": "src-shared-components-tc-communities-Header-style___logosWrap___2c1i8h",
      "menu": "src-shared-components-tc-communities-Header-style___menu___2fWXht",
      "menuItem": "src-shared-components-tc-communities-Header-style___menuItem___3vmTfg",
      "menuLink": "src-shared-components-tc-communities-Header-style___menuLink___RU0ueq",
      "menuLinkActive": "src-shared-components-tc-communities-Header-style___menuLinkActive___1gik1N",
      "menuWrap": "src-shared-components-tc-communities-Header-style___menuWrap___-1MeSD",
      "menuWrapOpen": "src-shared-components-tc-communities-Header-style___menuWrapOpen___3MQGA5",
      "mobileToggle": "src-shared-components-tc-communities-Header-style___mobileToggle___15QDEM",
      "search": "src-shared-components-tc-communities-Header-style___search___3oZOks",
      "userMenu": "src-shared-components-tc-communities-Header-style___userMenu___3lmDGQ",
      "userMenuHandle": "src-shared-components-tc-communities-Header-style___userMenuHandle____n8Ezm",
      "userWrap": "src-shared-components-tc-communities-Header-style___userWrap___8o74BN",
      "userWrapMobile": "src-shared-components-tc-communities-Header-style___userWrapMobile___3FraR5",
    }
  }
/>
`;
